After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750425 - JNI: variables used uninitialised
JNI: variables used uninitialised
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: java-atk-wrapper maintainer(s)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-06-04 22:00 UTC by Magdalen Berns (irc magpie)
Modified: 2015-06-04 22:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to address problem (864 bytes, patch)
2015-06-04 22:05 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2015-06-04 22:00:22 UTC
The variables iter, key and value are used initialised in jawimpl.c
Comment 1 Magdalen Berns (irc magpie) 2015-06-04 22:05:48 UTC
Created attachment 304619 [details] [review]
Patch to address problem