JNI: Initialise variables before using

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=750425